--- a/testi/styles.css
+++ b/testi/styles.css
@@ -1,3 +1,20 @@
+h1 {
+  text-align: center;
+}
+
+footer {
+  background-color: #359C60;
+  padding-top: 20px;
+}
+
+#alatunniste {
+    text-align: center;
+}
+
+p {
+  text-align: center;
+}
+
 body {
   margin: 0;
   font-family: Arial, Helvetica, sans-serif;
@@ -51,9 +68,6 @@ body {
   }
 }
 
-#alatunniste {
-    text-align: center;
-}
 
 
 
@@ -128,6 +142,7 @@ body {
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
+  margin-bottom: 50px;
 }
 
 .active, .dot:hover {
