--- a/testi/styles.css
+++ b/testi/styles.css
@@ -1,4 +1,4 @@
-h1 {
+h2 {
   text-align: center;
 }
 
@@ -69,10 +69,12 @@ body {
 }
 
 
-
-
 * {box-sizing:border-box}
 
+
+
+
+/*etusivun diaesitys*/
 /* Slideshow container */
 .slideshow-container {
   max-width: 700px;
@@ -158,4 +160,46 @@ body {
 @keyframes fade {
   from {opacity: .4}
   to {opacity: 1}
+}
+
+
+
+
+
+
+/*loppujen sivujen layout*/
+* {
+  box-sizing: border-box;
+}
+
+
+/* Create two columns/boxes that floats next to each other */
+aside {
+  float: left;
+  background: #ccc;
+}
+
+
+article {
+  float: left;
+  padding: 20px;
+  width: 70%;
+  background-color: #f1f1f1;
+
+}
+
+/* Clear floats after the columns */
+div::after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
+
+/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+@media (max-width: 600px) {
+  nav, article {
+    width: 100%;
+    height: auto;
+  }
 }
