--- a/testi/styles.css
+++ b/testi/styles.css
@@ -173,33 +173,41 @@ body {
 }
 
 
-/* Create two columns/boxes that floats next to each other */
+aside img {
+  display: block;
+  width: 100%;
+}
+
+/* Container for flexboxes */
+#section {
+  display: -webkit-flex;
+  display: flex;
+}
+
+/* Style the navigation menu */
 aside {
-  float: left;
+  -webkit-flex: 1;
+  -ms-flex: 1;
+  flex: 1;
   background: #ccc;
 }
 
 
+
+/* Style the content */
 article {
-  float: left;
-  padding: 20px;
-  width: 70%;
+  -webkit-flex: 3;
+  -ms-flex: 3;
+  flex: 3;
   background-color: #f1f1f1;
-
-}
-
-/* Clear floats after the columns */
-div::after {
-  content: "";
-  display: table;
-  clear: both;
+  padding: 10px;
 }
 
 
-/* Responsive layout - makes the two columns/boxes stack on top of each other instead of next to each other, on small screens */
+/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 @media (max-width: 600px) {
-  nav, article {
-    width: 100%;
-    height: auto;
+  section {
+    -webkit-flex-direction: column;
+    flex-direction: column;
   }
 }
