--- a/testi/styles.css
+++ b/testi/styles.css
@@ -206,7 +206,7 @@ article {
 
 /* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 @media (max-width: 600px) {
-  section {
+  div {
     -webkit-flex-direction: column;
     flex-direction: column;
   }
