--- a/Eläinsafari/styles.css
+++ b/Eläinsafari/styles.css
@@ -2,10 +2,16 @@ h2 {
   text-align: center;
 }
 
+a:link {color:#1a3327;}
+a:hover {color:#00d9ff;}
+a:active {color:#e3f300;}
+
 footer {
   background-color: #376B53;
   padding: 20px 0px 5px 0px;
   color: white;
+  border-radius: 20px 20px 0px 0px;
+   box-shadow: inset 5px 0px 10px #1a3327;
 }
 
 #alatunniste {
@@ -14,16 +20,21 @@ footer {
 
 p {
   text-align: center;
+  padding-bottom: 10px;
 }
 
 body {
   margin: 0;
   font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-size: 25px;
+  font-weight: 400;
 }
 
 .nav {
   overflow: hidden;
   background-color: #376B53;
+  border-radius: 0px 0px 20px 20px;
+  box-shadow: inset 0px 5px 10px #1a3327; 
 }
 
 .nav a {
@@ -124,6 +135,7 @@ body {
   bottom: 8px;
   width: 100%;
   text-align: center;
+  background-color: #1a332788;
 }
 
 /* Number text (1/3 etc) */
@@ -211,6 +223,7 @@ article {
   border-width: 2px;
   border-color: #376B53;
   font-size: 20px;
+  box-shadow: inset 5px 0px 10px #567d6b;
 }
 
 
