--- a/Eläinsafari/styles.css
+++ b/Eläinsafari/styles.css
@@ -122,28 +122,31 @@ body {
 
 /* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
+  background-color: #1a332788;
 }
 
 /* Caption text */
 .text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
+  color: white;
+  font-size: 20px;
+  padding: 5px 12px;
   position: absolute;
-  bottom: 8px;
+  bottom: 6px;
   width: 100%;
   text-align: center;
   background-color: #1a332788;
+   border-radius: 10px 10px 10px 10px;
 }
 
 /* Number text (1/3 etc) */
 .numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
+  color: white;
+  font-size: 15px;
+  padding: 5px 10px;
   position: absolute;
   top: 0;
+  background-color: #1a332788;
+   border-radius: 10px 10px 10px 10px;
 }
 
 /* The dots/bullets/indicators */
@@ -152,7 +155,7 @@ body {
   height: 15px;
   width: 15px;
   margin: 0 2px;
-  background-color: #bbb;
+  background-color: #a5f1cd;
   border-radius: 50%;
   display: inline-block;
   transition: background-color 0.6s ease;
@@ -160,7 +163,7 @@ body {
 }
 
 .active, .dot:hover {
-  background-color: #717171;
+  background-color: #376B53;
 }
 
 /* Fading animation */
