--- a/Eläinsafari/styles.css
+++ b/Eläinsafari/styles.css
@@ -1,5 +1,6 @@
 h2 {
   text-align: center;
+  color: #376B53;
 }
 
 a:link {color:#1a3327;}
@@ -80,25 +81,18 @@ body {
 }
 
 
-* {box-sizing:border-box}
-
-
-
 
 /*etusivun diaesitys*/
-/* Slideshow container */
 .slideshow-container {
   max-width: 600px;
   position: relative;
   margin: auto;
 }
 
-/* Hide the images by default */
 .mySlides {
   display: none;
 }
 
-/* Next & previous buttons */
 .prev, .next {
   cursor: pointer;
   position: absolute;
@@ -114,18 +108,15 @@ body {
   user-select: none;
 }
 
-/* Position the "next button" to the right */
 .next {
   right: 0;
   border-radius: 3px 0 0 3px;
 }
 
-/* On hover, add a black background color with a little bit see-through */
 .prev:hover, .next:hover {
   background-color: #1a332788;
 }
 
-/* Caption text */
 .text {
   color: white;
   font-size: 20px;
@@ -138,7 +129,6 @@ body {
    border-radius: 10px 10px 10px 10px;
 }
 
-/* Number text (1/3 etc) */
 .numbertext {
   color: white;
   font-size: 15px;
@@ -149,7 +139,6 @@ body {
    border-radius: 10px 10px 10px 10px;
 }
 
-/* The dots/bullets/indicators */
 .dot {
   cursor: pointer;
   height: 15px;
@@ -166,7 +155,6 @@ body {
   background-color: #376B53;
 }
 
-/* Fading animation */
 .fade {
   animation-name: fade;
   animation-duration: 1.5s;
@@ -197,13 +185,11 @@ aside img {
   border-width: 1px;
 }
 
-/* Container for flexboxes */
 .section {
   display: -webkit-flex;
   display: flex;
 }
 
-/* Style the navigation menu */
 aside {
   -webkit-flex: 1;
   -ms-flex: 1;
@@ -211,9 +197,6 @@ aside {
   background: #BAEBD4;
 }
 
-
-
-/* Style the content */
 article {
   -webkit-flex: 3;
   -ms-flex: 3;
@@ -225,11 +208,10 @@ article {
   border-width: 2px;
   border-color: #376B53;
   font-size: 20px;
-  box-shadow: inset 5px 0px 10px #567d6b;
+  box-shadow: inset 3px 3px 10px #567d6b;
 }
 
 
-/* Responsive layout - makes the menu and the content (inside the section) sit on top of each other instead of next to each other */
 @media (max-width: 600px) {
   div {
     -webkit-flex-direction: column;
